Tilemap helper functions, game prototype with grid constrained movement

--- a/res/main.css
+++ b/res/main.css
@@ -1,7 +1,9 @@
 #game {
-    width: 640px;
-    height: 300px;
+    width: 1280px;
+    height: 720px;
     margin:auto;
     position: relative;
     background-color: #222;
+    image-rendering: optimizeSpeed;
+    image-rendering: pixelated;
 }
